Fix learn page headings on mobile.

--- a/src/styles/pages/_learn.scss
+++ b/src/styles/pages/_learn.scss
@@ -2,5 +2,5 @@
   // Pad the heading a bit so it lines up with the card padding for the
   // learning paths.
   margin-top: 0;
-  padding: 0 56px;
+  padding-left: 32px;
 };
